[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Peyton-McKee <mckee.p@northeastern.edu>"]
readme = "README.md"
packages = [{ include = "analysis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
numpy = ">=2.2.6,<3.0.0"
python-env = "^1.0.0"
dotenv = "^0.9.9"
pyqtgraph = "^0.13.7"
pyqt5 = "^5.15.11"
scipy = "^1.15.3"

[tool.poetry.scripts]
imu-playback = "analysis.imu:main"
total-rotations = "analysis.rotations:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"